--- a/static/index.html
+++ b/static/index.html
@@ -55,15 +55,15 @@
             <div class="contacts d-flex justify-content-between align-items-center">
                 <div class="contact d-flex justify-content-between align-items-center">
                     <img src="./assets/vk.png" alt="vk" width="30vw">
-                    <a class="label">VK</a>
+                    <a class="label" href="https://vk.com/id216734424">VK</a>
                 </div>
                 <div class="contact d-flex justify-content-between align-items-center">
                     <img src="./assets/GitHub.png" alt="GitHub" width="30vw">
-                    <a class="label">GitHub</a>
+                    <a class="label" href="https://github.com/Alex-Andr-19">GitHub</a>
                 </div>
                 <div class="contact d-flex justify-content-between align-items-center">
                     <img src="./assets/inst.png" alt="Instagram" width="30vw">
-                    <a class="label">Instagram</a>
+                    <a class="label" href="https://www.instagram.com/aleks_andr_19/">Instagram</a>
                 </div>
             </div>
         </footer>
