Add nice search

--- a/static/index.html
+++ b/static/index.html
@@ -30,17 +30,10 @@
             </form>
 
             <div class="login-sing d-flex justify-content-between align-items-center">
-                <!-- Здесь будет написан логин пользователя -->
-                <!-- Если не зашел, то не изображается -->
-                <div id="user-login" class="login">
-                    LOGIN
-                </div>
+                <div id="user-login" class="login"></div>
 
-                <!-- SingIn/Up/Out -->
                 <div class="sing-some">
                     <form action="" class="d-flex justify-content-between">
-<!--                        <input type="button" value="SingIn" class="btn btn-info">-->
-<!--                        <input type="button" value="SingUp" class="btn btn-success">-->
                         <input type="button" onclick="location.href = '/login'" value="Sing Out" class="btn btn-dark">
                     </form>
                 </div>
